<resources>
    <string name="app_name">Unit Converter</string>
    <string name="unit_converter">UNIT CONVERTER</string>
    <string name="quantity">Quantity*</string>
    <string name="enter_values">Enter Values</string>
    <string name="units">Units</string>
    <string name="quantities">Quantities</string>
    <string name="result">Result</string>
    <string name="main_result">RESULT</string>
    <string name="values">Values:</string>
    <string name="result_unit">To:</string>
    <string name="from">From:</string>
    <string name="convert">Convert</string>

    <string-array name="quantity">
        <item>Length</item>
        <item>Volume</item>
        <item>Weight</item>
    </string-array>

    <string-array name="unit_len">
        <item>Meters</item>
        <item>Feet</item>
        <item>Millimeters</item>
    </string-array>

    <string-array name="unit_vol">
        <item>Litres</item>
        <item>Gallons</item>
        <item>Millilitres</item>
    </string-array>

    <string-array name="unit_wt">
        <item>Grams</item>
        <item>Ounce</item>
        <item>Milligrams</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>