<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BABABA"
    tools:context=".Converter">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/result_unit"
        android:textColor="#212121"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/result_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUserValue"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_values"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_unit"
        app:layout_constraintVertical_bias="0.245"
        tools:text="Enter Value" />

    <Spinner
        android:id="@+id/unit"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/units"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/result_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

    <Spinner
        android:id="@+id/quantity"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:contentDescription="@string/quantities"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/quantity_head"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:text="@string/quantity"
        android:textColor="#212121"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/result_unit"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/units"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/unit"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/userResult"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:text="@string/main_result"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/values"
        android:textColor="#212121"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editUserValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/from"
        android:textColor="#212121"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/convert"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/userResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserValue"
        app:layout_constraintVertical_bias="0.605" />


</androidx.constraintlayout.widget.ConstraintLayout>