<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFBABABA"
    android:fadingEdge="horizontal|vertical"
    tools:context=".AddUnits">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="Sum Unit: "
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/spResUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/quantity_head2"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:text="@string/quantity"
        android:textColor="#212121"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/spQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spFirstUnit"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spSecUnit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstValue"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etSecValue"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/enter_values"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etFirstValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etFirstValue"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/enter_values"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etSecValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spSecUnit"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spFirstUnit"
        app:layout_constraintTop_toBottomOf="@+id/etSecValue"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="1st Value: "
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/etFirstValue"
        app:layout_constraintEnd_toEndOf="@+id/etFirstValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etFirstValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:text="2nd Value: "
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/etSecValue"
        app:layout_constraintEnd_toEndOf="@+id/etSecValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etSecValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="1st Unit: "
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/spFirstUnit"
        app:layout_constraintEnd_toEndOf="@+id/spFirstUnit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spFirstUnit"
        app:layout_constraintTop_toBottomOf="@+id/etFirstValue"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="14dp"
        android:text="2nd Unit: "
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/spSecUnit"
        app:layout_constraintEnd_toEndOf="@+id/spSecUnit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spSecUnit"
        app:layout_constraintTop_toBottomOf="@+id/etSecValue"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spQuantity"
        android:layout_width="308dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spResUnit"
        android:layout_width="130dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFirstUnit"
        app:layout_constraintVertical_bias="0.213" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:text="Add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spResUnit"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/tvAddRes"
        android:layout_width="201dp"
        android:layout_height="43dp"
        android:text="@string/main_result"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.397" />
</androidx.constraintlayout.widget.ConstraintLayout>